updated menu toggle, fixed logo spacing

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -65,7 +65,7 @@
   & .main-nav__toggle {
     background: none;
     border: none;
-    padding: 1.5rem 2rem;
+    padding: 1.75rem 2rem;
     height: 100%;
 
     @media #{core.$screen-lg-up} {
@@ -89,7 +89,28 @@
   }
 
   & .main-nav__menu-toggle {
-    // padding: 2rem 1rem 2rem 1.5rem;
+    cursor: pointer;
+    color: #fff;
+    position: relative;
+    text-indent: -9999px;                 
+    white-space: nowrap;            
+
+    &::before {
+      content: "";
+      background-image: url(icon-constants.get-icon("standard--navigation-menu", core.$uq-white));
+      background-repeat: no-repeat;
+      width: 1.25rem;
+      height: 1.25rem;
+      transform: translate(50%, 50%);
+      position: absolute;
+      top: 1rem;
+      right: 2rem;
+      
+      @media #{core.$screen-lg-up} {
+        top: .25rem;
+        left: .5rem;
+      }
+    }
   }
 
   & .main-nav__search-toggle {
@@ -105,7 +126,7 @@
       height: 1.25rem;
       transform: translate(50%, 50%);
       position: absolute;
-      top: .75rem;
+      top: 1rem;
       right: 2rem;
       
       @media #{core.$screen-lg-up} {
@@ -343,9 +364,9 @@
     background: core.$uq-purple;
     position: absolute;
     width: 100%;
-    top: 4.1rem;
+    top: 3.95rem;
     z-index: 50;
-    box-shadow: 0 0.75rem 1.5rem rgb(24 24 24 / 20%);
+    box-shadow: 0 .75rem 1.5rem rgb(24 24 24 / 20%);
 
     @media #{core.$screen-lg-up} {
       top: 8.3rem;
@@ -546,7 +567,7 @@ body.no-scroll {
   z-index:1000;
   grid-area: mainnav-mobile;
   position:fixed;
-  top: 4.2rem;
+  top: 3.95rem;
   right:0;
   overflow-y:auto;
 }
